--- a/apps/admission-webhook-k8s/admission-webhook.yaml
+++ b/apps/admission-webhook-k8s/admission-webhook.yaml
@@ -17,7 +17,7 @@ spec:
       serviceAccount: admission-webhook-sa
       containers:
         - name: admission-webhook-k8s
-          image: ghcr.io/networkservicemesh/ci/cmd-admission-webhook-k8s:677922a
+          image: thetadr/cmd-admission-webhook-k8s:fix-if-pod
           imagePullPolicy: IfNotPresent
           readinessProbe:
             httpGet:
