--- a/examples/interdomain/nsm/cluster1/kustomization.yaml
+++ b/examples/interdomain/nsm/cluster1/kustomization.yaml
@@ -10,7 +10,8 @@ bases:
 - https://github.com/networkservicemesh/deployments-k8s/apps/registry-k8s?ref=c2118bb00fb516af2903731a1d92662b5f69a7b1
 - https://github.com/networkservicemesh/deployments-k8s/apps/registry-proxy-dns?ref=c2118bb00fb516af2903731a1d92662b5f69a7b1
 - https://github.com/networkservicemesh/deployments-k8s/apps/nsmgr-proxy?ref=c2118bb00fb516af2903731a1d92662b5f69a7b1
-- https://github.com/networkservicemesh/deployments-k8s/apps/admission-webhook-k8s?ref=c2118bb00fb516af2903731a1d92662b5f69a7b1
+#- https://github.com/networkservicemesh/deployments-k8s/apps/admission-webhook-k8s?ref=c2118bb00fb516af2903731a1d92662b5f69a7b1
+- ../../../../apps/admission-webhook-k8s
 
 resources:
   - namespace.yaml
