--- a/examples/interdomain/nsm_istio_vl3/istio-namespace.yaml
+++ b/examples/interdomain/nsm_istio_vl3/istio-namespace.yaml
@@ -4,5 +4,5 @@ apiVersion: v1
 metadata:
   name: istio-system
   annotations:
-#    networkservicemesh.io: kernel://my-vl3-network/nsm-1?dnsName=istio-cp
-    networkservicemesh.io: kernel://my-vl3-network/nsm-1
+    networkservicemesh.io: kernel://my-vl3-network/nsm-1?dnsName=istio-cp
+#    networkservicemesh.io: kernel://my-vl3-network/nsm-1
