--- a/examples/interdomain/nsm_istio_vl3/test-clean-vm/vm-dir/cluster.env
+++ b/examples/interdomain/nsm_istio_vl3/test-clean-vm/vm-dir/cluster.env
@@ -1,16 +1,16 @@
 CANONICAL_REVISION='latest'
-CANONICAL_SERVICE='server'
+CANONICAL_SERVICE='vm-app'
 ISTIO_INBOUND_PORTS='*'
 ISTIO_LOCAL_EXCLUDE_PORTS='22,15090,15021,15020'
-ISTIO_METAJSON_LABELS='{"app":"server","service.istio.io/canonical-name":"server","service.istio.io/canonical-revision":"latest"}'
+ISTIO_METAJSON_LABELS='{"app":"vm-app","service.istio.io/canonical-name":"vm-app","service.istio.io/canonical-revision":"latest"}'
 ISTIO_META_CLUSTER_ID='Kubernetes'
 ISTIO_META_DNS_CAPTURE='true'
-ISTIO_META_MESH_ID='mesh1'
+ISTIO_META_MESH_ID=''
 ISTIO_META_NETWORK=''
-ISTIO_META_WORKLOAD_NAME='server'
-ISTIO_NAMESPACE='default'
-ISTIO_SERVICE='server.default'
+ISTIO_META_WORKLOAD_NAME='vm-app'
+ISTIO_NAMESPACE='vm-ns'
+ISTIO_SERVICE='vm-app.vm-ns'
 ISTIO_SERVICE_CIDR='*'
-POD_NAMESPACE='default'
-SERVICE_ACCOUNT='service-account'
+POD_NAMESPACE='vm-ns'
+SERVICE_ACCOUNT='serviceaccountvm'
 TRUST_DOMAIN='cluster.local'
