--- a/examples/interdomain/nsm_istio_vl3/test-clean-vm/vm-dir/mesh.yaml
+++ b/examples/interdomain/nsm_istio_vl3/test-clean-vm/vm-dir/mesh.yaml
@@ -1,17 +1,16 @@
 defaultConfig:
   discoveryAddress: istiod.istio-system.svc:15012
-  meshId: mesh1
   proxyMetadata:
     CANONICAL_REVISION: latest
-    CANONICAL_SERVICE: server
+    CANONICAL_SERVICE: vm-app
     ISTIO_META_CLUSTER_ID: Kubernetes
     ISTIO_META_DNS_CAPTURE: "true"
-    ISTIO_META_MESH_ID: mesh1
+    ISTIO_META_MESH_ID: ""
     ISTIO_META_NETWORK: ""
-    ISTIO_META_WORKLOAD_NAME: server
-    ISTIO_METAJSON_LABELS: '{"app":"server","service.istio.io/canonical-name":"server","service.istio.io/canonical-revision":"latest"}'
-    POD_NAMESPACE: default
-    SERVICE_ACCOUNT: service-account
+    ISTIO_META_WORKLOAD_NAME: vm-app
+    ISTIO_METAJSON_LABELS: '{"app":"vm-app","service.istio.io/canonical-name":"vm-app","service.istio.io/canonical-revision":"latest"}'
+    POD_NAMESPACE: vm-ns
+    SERVICE_ACCOUNT: serviceaccountvm
     TRUST_DOMAIN: cluster.local
   tracing:
     zipkin:
