working istio-proxy (server.yaml)
Signed-off-by: Vyacheslav Tumanov <me@slavatumanov.me>

--- a/examples/interdomain/nsm_istio_vl3/vl3-dns/nse-patch.yaml
+++ b/examples/interdomain/nsm_istio_vl3/vl3-dns/nse-patch.yaml
@@ -18,5 +18,5 @@ spec:
               value: "true"
             - name: NSM_DNS_TEMPLATES
 #              value: "{{ index .label \"app\" }}.{{ index .Labels \" namespace \"}}."
-#              value: "{{ index .Labels \"podName\" }}.vl3."
-              value: "{{ index .Labels \"dnsName\" }}.sample.svc."
+              value: "{{ index .Labels \"dnsName\" }}.{{ .NetworkService }}."
+#              value: "{{ index .Labels \"dnsName\" }}.sample.svc."
