--- a/examples/interdomain/nsm_istio_vl3/sample-ns.yaml
+++ b/examples/interdomain/nsm_istio_vl3/sample-ns.yaml
@@ -5,8 +5,8 @@ metadata:
   name: sample
   labels:
     istio-injection: enabled
-  annotations:
-    networkservicemesh.io: kernel://my-vl3-network/nsm-1
+#  annotations:
+#    networkservicemesh.io: kernel://my-vl3-network/nsm-1
 ---
 apiVersion: v1
 kind: Service
@@ -31,8 +31,8 @@ metadata:
   labels:
     app: helloworld
     version: v1
-#  annotations:
-#    networkservicemesh.io: kernel://my-vl3-network/nsm-1?dnsName=helloworld
+  annotations:
+    networkservicemesh.io: kernel://my-vl3-network/nsm-1?dnsName=helloworld
 spec:
   replicas: 1
   selector:
@@ -63,8 +63,8 @@ metadata:
   labels:
     app: helloworld
     version: v2
-#  annotations:
-#    networkservicemesh.io: kernel://my-vl3-network/nsm-1?dnsName=hello2
+  annotations:
+    networkservicemesh.io: kernel://my-vl3-network/nsm-1?dnsName=hello2
 spec:
   replicas: 1
   selector:
@@ -86,25 +86,3 @@ spec:
           imagePullPolicy: IfNotPresent #Always
           ports:
             - containerPort: 5000
----
-apiVersion: v1
-kind: Pod
-metadata:
-  namespace: sample
-  name: alpine
-  labels:
-    app: alpine
-spec:
-  containers:
-    - name: alpine
-      image: alpine:3.15.0
-      imagePullPolicy: IfNotPresent
-      stdin: true
-      tty: true
-      resources:
-        requests:
-          cpu: 50m
-          memory: 40Mi
-        limits:
-          memory: 80Mi
-          cpu: 100m
