--- a/apps/admission-webhook-k8s/admission-webhook.yaml
+++ b/apps/admission-webhook-k8s/admission-webhook.yaml
@@ -17,7 +17,7 @@ spec:
       serviceAccount: admission-webhook-sa
       containers:
         - name: admission-webhook-k8s
-          image: ghcr.io/networkservicemesh/cmd-admission-webhook-k8s:v1.4.0
+          image: thetadr/cmd-admission-webhook-k8s:fix2
           imagePullPolicy: IfNotPresent
           readinessProbe:
             httpGet:
@@ -40,9 +40,9 @@ spec:
             - name: NSM_ANNOTATION
               value: networkservicemesh.io
             - name: NSM_CONTAINER_IMAGES
-              value: ghcr.io/networkservicemesh/cmd-nsc:v1.4.0
+              value: thetadr/cmd-nsc:dns-fix
             - name: NSM_INIT_CONTAINER_IMAGES
-              value: ghcr.io/networkservicemesh/cmd-nsc-init:v1.4.0
+              value: ghcr.io/networkservicemesh/ci/cmd-nsc-init:8f0a5f1
             - name: NSM_LABELS
               value: spiffe.io/spiffe-id:true
             - name: NSM_ENVS
