--- a/apps/admission-webhook-k8s/admission-webhook.yaml
+++ b/apps/admission-webhook-k8s/admission-webhook.yaml
@@ -17,7 +17,7 @@ spec:
       serviceAccount: admission-webhook-sa
       containers:
         - name: admission-webhook-k8s
-          image: thetadr/cmd-admission-webhook-k8s:fix2
+          image: ghcr.io/networkservicemesh/ci/cmd-admission-webhook-k8s:56d3ab8
           imagePullPolicy: IfNotPresent
           readinessProbe:
             httpGet:
@@ -40,9 +40,9 @@ spec:
             - name: NSM_ANNOTATION
               value: networkservicemesh.io
             - name: NSM_CONTAINER_IMAGES
-              value: thetadr/cmd-nsc:dns-fix
+              value: ghcr.io/networkservicemesh/ci/cmd-nsc:b5ab50c
             - name: NSM_INIT_CONTAINER_IMAGES
-              value: ghcr.io/networkservicemesh/ci/cmd-nsc-init:8f0a5f1
+              value: ghcr.io/networkservicemesh/ci/cmd-nsc-init:756f69a
             - name: NSM_LABELS
               value: spiffe.io/spiffe-id:true
             - name: NSM_ENVS
