--- a/examples/interdomain/nsm_istio_vl3/test-clean-vm/vm-and-cluster-config-files/vm-dir/cluster.env
+++ b/examples/interdomain/nsm_istio_vl3/test-clean-vm/vm-and-cluster-config-files/vm-dir/cluster.env
@@ -5,7 +5,7 @@ ISTIO_LOCAL_EXCLUDE_PORTS='22,15090,15021,15020'
 ISTIO_METAJSON_LABELS='{"app":"vm-app","service.istio.io/canonical-name":"vm-app","service.istio.io/canonical-revision":"latest"}'
 ISTIO_META_CLUSTER_ID='Kubernetes'
 ISTIO_META_DNS_CAPTURE='true'
-ISTIO_META_MESH_ID=''
+ISTIO_META_MESH_ID='mesh1'
 ISTIO_META_NETWORK=''
 ISTIO_META_WORKLOAD_NAME='vm-app'
 ISTIO_NAMESPACE='vm-ns'
