--- a/examples/interdomain/nsm_istio_vl3/mtls-check/with-nsm/sample-ns.yaml
+++ b/examples/interdomain/nsm_istio_vl3/mtls-check/with-nsm/sample-ns.yaml
@@ -47,8 +47,8 @@ spec:
     spec:
       containers:
         - name: helloworld
-          # image: docker.io/istio/examples-helloworld-v1
-          image: docker.io/kennethreitz/httpbin
+          image: docker.io/istio/examples-helloworld-v1
+          # image: docker.io/kennethreitz/httpbin
           resources:
             requests:
               cpu: "100m"
@@ -81,10 +81,12 @@ spec:
     spec:
       containers:
         - name: helloworld
-          image: docker.io/istio/examples-helloworld-v2
+          # image: docker.io/istio/examples-helloworld-v2
+          image: docker.io/kennethreitz/httpbin
           resources:
             requests:
               cpu: "100m"
           imagePullPolicy: IfNotPresent #Always
           ports:
+            - containerPort: 80
             - containerPort: 5000
