--- a/examples/interdomain/nsm_istio_vl3/test-clean-vm/ubuntu-no-ns.yaml
+++ b/examples/interdomain/nsm_istio_vl3/test-clean-vm/ubuntu-no-ns.yaml
@@ -13,12 +13,10 @@ spec:
     metadata:
       labels:
         app: ubuntu
-      annotations:
-        # networkservicemesh.io: kernel://my-vl3-network@my.cluster1/nsm-1?dnsName=ubuntu
     spec:
       containers:
         - name: ubuntu
-          image: ubuntu
+          image: ubuntu:22.04
           command: ["sleep", "123456"]
           securityContext:
             privileged: true
