--- a/examples/interdomain/nsm_istio_vl3/test-clean-vm/ubuntu-with-istio.yaml
+++ b/examples/interdomain/nsm_istio_vl3/test-clean-vm/ubuntu-with-istio.yaml
@@ -25,7 +25,7 @@ spec:
     spec:
       containers:
         - name: ubuntu
-          image: ubuntu
+          image: ubuntu:22.04
           command: ["sleep", "123456"]
           securityContext:
             privileged: true
