use ubuntu in test

--- a/examples/interdomain/nsm_istio_vl3/clean/greeting/kustomization.yaml
+++ b/examples/interdomain/nsm_istio_vl3/clean/greeting/kustomization.yaml
@@ -5,7 +5,8 @@ kind: Kustomization
 namespace: vl3-test
 
 resources:
-- ./server.yaml
+- ubuntu-ic.yaml
+# - ./server.yaml
 
 configMapGenerator:
   - name: cert-file
