--- a/examples/interdomain/nsm_istio_vl3/clean/ubuntu-ic.yaml
+++ b/examples/interdomain/nsm_istio_vl3/clean/ubuntu-ic.yaml
@@ -28,10 +28,6 @@ spec:
         service.istio.io/canonical-name: ubuntu
         service.istio.io/canonical-revision: latest
     spec:
-      # hostAliases:
-      # - ip: "172.16.0.2"
-      #   hostnames:
-      #   - istiod.istio-system.svc
       containers:
       - command:
         - sleep
@@ -45,11 +41,10 @@ spec:
         - proxy
         - sidecar
         - --domain
-        # - $(POD_NAMESPACE).svc.cluster.local
-        - ""
-        - --proxyLogLevel=debug
-        - --proxyComponentLogLevel=misc:debug
-        - --log_output_level=default:debug
+        - $(POD_NAMESPACE).svc.cluster.local
+        - --proxyLogLevel=warning
+        - --proxyComponentLogLevel=misc:error
+        - --log_output_level=default:info
         - --concurrency
         - "2"
         env:
@@ -63,18 +58,18 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.name
-        # - name: POD_NAMESPACE
-        #   valueFrom:
-        #     fieldRef:
-        #       fieldPath: metadata.namespace
+        - name: POD_NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
         - name: INSTANCE_IP
           valueFrom:
             fieldRef:
               fieldPath: status.podIP
-        # - name: SERVICE_ACCOUNT
-        #   valueFrom:
-        #     fieldRef:
-        #       fieldPath: spec.serviceAccountName
+        - name: SERVICE_ACCOUNT
+          valueFrom:
+            fieldRef:
+              fieldPath: spec.serviceAccountName
         - name: HOST_IP
           valueFrom:
             fieldRef:
@@ -128,34 +123,22 @@ spec:
           runAsNonRoot: true
           runAsUser: 1337
         volumeMounts:
-        - mountPath: /var/run/secrets/istio/root-cert.pem
-          name: cert
-          subPath: root-cert.pem
-        - mountPath: /var/lib/istio/envoy/cluster.env
-          name: cert
-          subPath: cluster.env
-        - mountPath: /etc/istio/config/mesh
-          name: cert
-          subPath: mesh.yaml
-        - mountPath: /var/run/secrets/tokens/istio-token
-          name: cert
-          subPath: istio-token
         - mountPath: /var/run/secrets/workload-spiffe-uds
           name: workload-socket
         - mountPath: /var/run/secrets/credential-uds
           name: credential-socket
         - mountPath: /var/run/secrets/workload-spiffe-credentials
           name: workload-certs
-        # - mountPath: /var/run/secrets/istio
-        #   name: istiod-ca-cert
+        - mountPath: /var/run/secrets/istio
+          name: istiod-ca-cert
         - mountPath: /var/lib/istio/data
           name: istio-data
         - mountPath: /etc/istio/proxy
           name: istio-envoy
-        # - mountPath: /var/run/secrets/tokens
-        #   name: istio-token
-        # - mountPath: /etc/istio/pod
-        #   name: istio-podinfo
+        - mountPath: /var/run/secrets/tokens
+          name: istio-token
+        - mountPath: /etc/istio/pod
+          name: istio-podinfo
       initContainers:
       - args:
         - istio-iptables
@@ -199,9 +182,6 @@ spec:
           runAsNonRoot: false
           runAsUser: 0
       volumes:
-      - name: cert
-        configMap:
-          name: cert-file
       - name: workload-socket
       - name: credential-socket
       - name: workload-certs
@@ -210,24 +190,24 @@ spec:
         name: istio-envoy
       - emptyDir: {}
         name: istio-data
-      # - downwardAPI:
-      #     items:
-      #     - fieldRef:
-      #         fieldPath: metadata.labels
-      #       path: labels
-      #     - fieldRef:
-      #         fieldPath: metadata.annotations
-      #       path: annotations
-      #   name: istio-podinfo
-      # - name: istio-token
-      #   projected:
-      #     sources:
-      #     - serviceAccountToken:
-      #         audience: istio-ca
-      #         expirationSeconds: 43200
-      #         path: istio-token
-      # - configMap:
-      #     name: istio-ca-root-cert
-      #   name: istiod-ca-cert
+      - downwardAPI:
+          items:
+          - fieldRef:
+              fieldPath: metadata.labels
+            path: labels
+          - fieldRef:
+              fieldPath: metadata.annotations
+            path: annotations
+        name: istio-podinfo
+      - name: istio-token
+        projected:
+          sources:
+          - serviceAccountToken:
+              audience: istio-ca
+              expirationSeconds: 43200
+              path: istio-token
+      - configMap:
+          name: istio-ca-root-cert
+        name: istiod-ca-cert
 status: {}
 ---
