gather more logs

--- a/examples/interdomain/nsm_istio_vl3/clean/greeting/ubuntu-ic-hosts.yaml
+++ b/examples/interdomain/nsm_istio_vl3/clean/greeting/ubuntu-ic-hosts.yaml
@@ -28,10 +28,10 @@ spec:
         service.istio.io/canonical-name: ubuntu
         service.istio.io/canonical-revision: latest
     spec:
-      # hostAliases:
-      # - ip: "172.16.0.2"
-      #   hostnames:
-      #   - istiod.istio-system.svc
+      hostAliases:
+      - ip: "172.16.0.2"
+        hostnames:
+        - istiod.istio-system.svc
       containers:
       - command:
         - sleep
