--- a/examples/interdomain/nsm_istio_vl3/clean/greeting/kustomization.yaml
+++ b/examples/interdomain/nsm_istio_vl3/clean/greeting/kustomization.yaml
@@ -2,12 +2,12 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: vl3-test-w-hosts
+namespace: vl3-test
 
 resources:
 - namespace.yaml
-- ubuntu-ic-hosts.yaml
-# - ubuntu-ic.yaml
+# - ubuntu-ic-hosts.yaml
+- ubuntu-ic.yaml
 # - ./server.yaml
 
 configMapGenerator:
