--- a/examples/interdomain/nsm_istio_vl3/clean/greeting/kustomization.yaml
+++ b/examples/interdomain/nsm_istio_vl3/clean/greeting/kustomization.yaml
@@ -6,8 +6,8 @@ namespace: vl3-test
 
 resources:
 - namespace.yaml
-# - ubuntu-ic-hosts.yaml
-- ubuntu-ic.yaml
+- ubuntu-ic-hosts.yaml
+# - ubuntu-ic.yaml
 # - ./server.yaml
 
 configMapGenerator:
