--- a/examples/interdomain/nsm_istio_vl3/mtls-check/with-nsm/vl3-dns/kustomization.yaml
+++ b/examples/interdomain/nsm_istio_vl3/mtls-check/with-nsm/vl3-dns/kustomization.yaml
@@ -5,8 +5,8 @@ kind: Kustomization
 namespace: ns-dns-vl3
 
 bases:
-- https://github.com/networkservicemesh/deployments-k8s/apps/nse-vl3-vpp?ref=648da5a92eea2144c1ee2395a1ceea6ffd20efd9
-- https://github.com/networkservicemesh/deployments-k8s/apps/vl3-ipam?ref=648da5a92eea2144c1ee2395a1ceea6ffd20efd9
+- ../../../../../../apps/nse-vl3-vpp
+- ../../../../../../apps/vl3-ipam
 
 resources:
 - namespace.yaml
