--- a/examples/interdomain/nsm_istio_vl3/clean/sample-ns.yaml
+++ b/examples/interdomain/nsm_istio_vl3/clean/sample-ns.yaml
@@ -18,6 +18,8 @@ spec:
   ports:
     - port: 5000
       name: http
+    - port: 80
+      name: http80
   selector:
     app: helloworld
 ---
@@ -46,41 +48,45 @@ spec:
       containers:
         - name: helloworld
           image: docker.io/istio/examples-helloworld-v1
+          # image: docker.io/kennethreitz/httpbin
           resources:
             requests:
               cpu: "100m"
           imagePullPolicy: IfNotPresent #Always
           ports:
+            - containerPort: 80
             - containerPort: 5000
 ---
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  namespace: sample
-  name: helloworld-v2
-  labels:
-    app: helloworld
-    version: v2
-  annotations:
-    networkservicemesh.io: kernel://my-vl3-network/nsm-1?dnsName=hello2
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: helloworld
-      version: v2
-  template:
-    metadata:
-      labels:
-        app: helloworld
-        version: v2
-    spec:
-      containers:
-        - name: helloworld
-          image: docker.io/istio/examples-helloworld-v2
-          resources:
-            requests:
-              cpu: "100m"
-          imagePullPolicy: IfNotPresent #Always
-          ports:
-            - containerPort: 5000
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   namespace: sample
+#   name: helloworld-v2
+#   labels:
+#     app: helloworld
+#     version: v2
+#   annotations:
+#     networkservicemesh.io: kernel://my-vl3-network/nsm-1?dnsName=hello2
+# spec:
+#   replicas: 1
+#   selector:
+#     matchLabels:
+#       app: helloworld
+#       version: v2
+#   template:
+#     metadata:
+#       labels:
+#         app: helloworld
+#         version: v2
+#     spec:
+#       containers:
+#         - name: helloworld
+#           image: docker.io/istio/examples-helloworld-v2
+#           # image: docker.io/kennethreitz/httpbin
+#           resources:
+#             requests:
+#               cpu: "100m"
+#           imagePullPolicy: IfNotPresent #Always
+#           ports:
+#             - containerPort: 80
+#             - containerPort: 5000
