--- a/examples/interdomain/nsm_istio_vl3/clean/ubuntu-hosts-2/ubuntu-ic-hosts.yaml
+++ b/examples/interdomain/nsm_istio_vl3/clean/ubuntu-hosts-2/ubuntu-ic-hosts.yaml
@@ -31,8 +31,7 @@ spec:
         - proxy
         - sidecar
         - --domain
-        # - $(POD_NAMESPACE).svc.cluster.local
-        - ""
+        - $(POD_NAMESPACE).svc.cluster.local
         - --proxyLogLevel=warning
         - --proxyComponentLogLevel=misc:error
         - --log_output_level=default:info
