--- a/apps/forwarder-vpp/forwarder.yaml
+++ b/apps/forwarder-vpp/forwarder.yaml
@@ -19,7 +19,8 @@ spec:
       hostNetwork: true
       dnsPolicy: ClusterFirstWithHostNet
       containers:
-        - image: ghcr.io/networkservicemesh/ci/cmd-forwarder-vpp:d52a54d
+        # - image: ghcr.io/networkservicemesh/ci/cmd-forwarder-vpp:d52a54d
+        - image: daniluzlov/daniluzlov-test:myfwd--2023-02-n4-disable-stats-adaptive
           imagePullPolicy: IfNotPresent
           name: forwarder-vpp
           securityContext:
@@ -58,9 +59,9 @@ spec:
           resources:
             requests:
               cpu: 150m
-            limits:
-              memory: 500Mi
-              cpu: 525m
+            # limits:
+            #   memory: 500Mi
+            #   cpu: 525m
           readinessProbe:
             exec:
               command: ["/bin/grpc-health-probe", "-spiffe", "-addr=unix:///listen.on.sock"]
