--- a/apps/nse-vl3-vpp/nse.yaml
+++ b/apps/nse-vl3-vpp/nse.yaml
@@ -43,9 +43,9 @@ spec:
           resources:
             requests:
               cpu: 150m
-            # limits:
-            #   memory: 400Mi
-            #   cpu: 500m
+            limits:
+              memory: 400Mi
+              cpu: 500m
       volumes:
         - name: spire-agent-socket
           hostPath:
