--- a/apps/nse-vl3-vpp/nse.yaml
+++ b/apps/nse-vl3-vpp/nse.yaml
@@ -17,8 +17,8 @@ spec:
     spec:
       containers:
         - name: nse
-          # image: ghcr.io/networkservicemesh/ci/cmd-nse-vl3-vpp:2814c48
-          image: daniluzlov/daniluzlov-test:myvl3--2023-02-n4-disable-stats-adaptive
+          image: ghcr.io/networkservicemesh/ci/cmd-nse-vl3-vpp:2814c48
+          # image: daniluzlov/daniluzlov-test:myvl3--2023-02-n5-disable-stats
           imagePullPolicy: IfNotPresent
           env:
             - name: SPIFFE_ENDPOINT_SOCKET
@@ -43,9 +43,9 @@ spec:
           resources:
             requests:
               cpu: 150m
-            limits:
-              memory: 400Mi
-              cpu: 500m
+            # limits:
+            #   memory: 400Mi
+            #   cpu: 500m
       volumes:
         - name: spire-agent-socket
           hostPath:
