--- a/apps/admission-webhook-k8s/admission-webhook.yaml
+++ b/apps/admission-webhook-k8s/admission-webhook.yaml
@@ -40,7 +40,7 @@ spec:
             - name: NSM_ANNOTATION
               value: networkservicemesh.io
             - name: NSM_CONTAINER_IMAGES
-              value: docker.io/daniluzlov/cmd-nsc:20-close
+              value: docker.io/daniluzlov/cmd-nsc:21-reselect
             - name: NSM_INIT_CONTAINER_IMAGES
               value: ghcr.io/networkservicemesh/ci/cmd-nsc-init:3438325
             - name: NSM_LABELS
